# stack-status

./: Cargo.toml  README.md
.claude/: mcp.json
examples/: claude-desktop-config.json
src/: display.rs  github.rs  graphite.rs  main.rs  mcp.rs
