[package]
name = "stack-status"
version = "0.1.0"
edition = "2021"
description = "CLI tool for Graphite stack status with live CI check progress"
license = "MIT"
repository = "https://github.com/yourusername/stack-status"
keywords = ["graphite", "github", "ci", "cli", "mcp"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Async runtime (needed for MCP)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-std", "time", "sync"] }

# JSON parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# MCP SDK
rmcp = { version = "0.3", features = ["server", "transport-io"] }
schemars = "1.0"

# Terminal colors (minimal, no-std compatible)
anstream = "0.6"
anstyle = "1"

# Error handling
anyhow = "1"

# Date/time
chrono = "0.4"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
panic = "abort"     # Abort on panic (smaller binary)
strip = true        # Strip symbols
